# open_f429_chibios

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  STM32F429xI_SDRAM.ld  main.c
.github/workflows/: c-cpp.yml
cfg/: chconf.h  debug_conf.h  mcuconf.h  shell_conf.h
debug/: chibi.jdebug  chibi_linux.jdebug  f429_chibi (build-ch.elf)(OpenOCD, Flash and Run).launch  f429_chibi Default.launch
source/: debug_print.c  shell_usart1_serial.c  shell_usart1_serial.h  swo_print.c  thread_registry.h
source/debug_usart1/: debug_print.c  debug_print.h  debug_usart.mk
source/periph/: periph.mk
source/support/endianness/: endianness.c  endianness.h  endianness.mk
source/swo_debug/: swo_debug.mk  swo_print.h
source/swo_debug/inc/: swo_print.h  swo_regs.h
source/swo_debug/src/: swo_print.c  swo_regs.c
source/threads/: thread_registry.c  thread_registry.h  threads.mk
source/threads/leds/: leds.mk
test/: CMakeLists.txt  test.mk
test/cmake/: CMakeLists.txt
test/fff/: CMakeLists.txt
test/stub/: CMakeLists.txt  swo_print.h  swo_regs.h
test/swo/: swo_print.h  test.c
test/test_config/: CMakeLists.txt
test/unity/: CMakeLists.txt  unity_config.h
